--- a/css/game.css
+++ b/css/game.css
@@ -1,19 +1,20 @@
 body{
 	background-image:url("../images/bg.jpg");
+	overflow-x:hidden;
 }
 
 .top-bar{
 	background-color:#000000;
 	opacity:0.4;
-	position:fixed;
+	position:absolute;
 	width:100%;
 	display: inline;
 	color:#ffffff;
 	font-weight:bold;
 	font-size:32px;
 	padding:5px;
+	overflow-x:hidden;
 	
-
 	
 }
 .top{
@@ -29,5 +30,145 @@ li{
 }
 .time{
 	float:right;
+	
+}
+.upper-cards{
+	margin-left:10%;
+	width:100%;
+	height:100%;
+	overflow: hidden;
+	
+}
+.row1-left-1{
+	
+	
+	display:inline-block;
+	float:left;	
+	width:10%;
+	height:10%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-bottom:1%;
+	
+	
+}
+.row1-left-2{
+	
+	
+	display:inline-block;
+	float:left;	
+	width:10%;
+	height:10%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-bottom:1%;
+	
+	
+}
+.row1{
+	
+	
+	display:inline-block;	 
+	width:10%;
+	height:10%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-bottom:1%;
+	
+	
+}
+.bottom-cards{
+	margin-left:10%;
+	width:100%;
+	height:100%;
+	overflow: hidden;
+	float:left;
+	
+}
+.row2{
+	
+	
+	display:inline-block;	 
+	width:10%;
+	height:10%;
+	overflow:hidden;
+	z-index:2;
+	margin-right:1%;
+	margin-bottom:1%;
+	
+	
+}
+.row1-left-1>img,.row1-left-2>img,.row1>img,.row2>img
+{
+	width:100%;
+	height:auto;
+	
+	
+}
+.row-stack1{
+	
+	
+	display:inline-block;	 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	
+	margin-bottom:5%;
+	margin-top:-15%;
+	margin-left:21%;
+	
+}
+
+.imageone{
+	
+	z-index:auto;
+
+
+}
+.image2{
+	
+	z-index:1;	
+	margin-top:-110%;
+	position:relative;
+	
+}
+
+.image>img{
+	position:relative;
+	width:100%;
+	display:block;
+}
+/*positioning and formatting of row 2 col3 stacked images*/
+.row-stack2{
+	
+	
+	display:inline-block;	 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-bottom:2%;
+	margin-top:-21%;
+	margin-left:1%;
+	
+}
+.image3-1{
+	
+	z-index:0;
+
+
+}
+.image3-2{
+	
+	z-index:1;	
+	margin-top:-110%;
+	position:relative;
+	
+}
+.image3-3{
+	
+	z-index:2;	
+	margin-top:-110%;
+	position:relative;
 	
 }
