--- a/css/game.css
+++ b/css/game.css
@@ -77,14 +77,7 @@ li{
 	
 	
 }
-.bottom-cards{
-	margin-left:10%;
-	width:100%;
-	height:100%;
-	overflow: hidden;
-	float:left;
-	
-}
+
 .row2{
 	
 	
@@ -95,7 +88,7 @@ li{
 	z-index:2;
 	margin-right:1%;
 	margin-bottom:1%;
-	
+	margin-left:10%;
 	
 }
 .row1-left-1>img,.row1-left-2>img,.row1>img,.row2>img
@@ -108,15 +101,13 @@ li{
 .row-stack1{
 	
 	
-	display:inline-block;	 
+	display:block;	 
 	width:10%;
 	height:30%;
 	overflow:hidden;
-	
-	margin-bottom:5%;
-	margin-top:-15%;
+	margin-right:1%;
 	margin-left:21%;
-	
+	margin-top:-15%;
 }
 
 .imageone{
@@ -147,28 +138,101 @@ li{
 	height:30%;
 	overflow:hidden;
 	margin-right:1%;
-	margin-bottom:2%;
-	margin-top:-21%;
-	margin-left:1%;
-	
+	margin-left:32%;
+	margin-top:-16.4%;
 }
 .image3-1{
 	
-	z-index:0;
+	z-index:1;
 
 
 }
 .image3-2{
 	
-	z-index:1;	
-	margin-top:-110%;
-	position:relative;
+	z-index:2;	
+	margin-top:-108%;
 	
 }
 .image3-3{
 	
-	z-index:2;	
+	z-index:3;	
 	margin-top:-110%;
 	position:relative;
 	
+}
+/*positioning and formatting of row 2 col3 stacked images*/
+.row-stack3{
+	
+	
+	display:block; 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-left:43%;
+	margin-top:-20%;
+
+}
+.image4-1{
+	
+	z-index:2;
+
+
+}
+.image4-2{
+	
+	z-index:2;	
+	margin-top:-110%;
+	
+}
+.image4-3{
+	
+	z-index:3;	
+	margin-top:-110%;
+	position:relative;
+	
+}
+.image4-4{
+	
+	z-index:4;	
+	margin-top:-110%;
+	position:relative;
+	
+}
+
+.row-stack4{
+	
+	
+	display:block; 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-left:54.5%;
+	margin-top:-22%;
+
+}
+.row-stack5{
+	
+	
+	display:block; 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	margin-right:1%;
+	
+	margin-left:66%;
+	margin-top:-25%;
+}
+.row-stack6{
+	
+	
+	display:block; 
+	width:10%;
+	height:30%;
+	overflow:hidden;
+	margin-right:1%;
+	margin-left:77.5%;
+	margin-top:-28%;
+
 }
