--- a/css/game.css
+++ b/css/game.css
@@ -74,6 +74,8 @@ li{
 	overflow:hidden;
 	margin-right:1%;
 	margin-bottom:1%;
+	background-color:#003300;
+	opacity:0.4;
 	
 	
 }
@@ -90,6 +92,12 @@ li{
 	margin-bottom:1%;
 	margin-left:10%;
 	
+}
+.row2 >img:hover{
+	background-color: #C37500;
+  opacity:0.7 !important;
+  filter:alpha(opacity=70) !important; /* For IE8 and earlier */
+  box-shadow: 0 0 0px #000000 !important;
 }
 .row1-left-1>img,.row1-left-2>img,.row1>img,.row2>img
 {
@@ -235,4 +243,16 @@ li{
 	margin-left:77.5%;
 	margin-top:-28%;
 
+}
+.image>img:hover{
+	background-color: #C37500;
+  opacity:0.7 !important;
+  filter:alpha(opacity=70) !important; /* For IE8 and earlier */
+  box-shadow: 0 0 0px #000000 !important;
+}
+.row1-left-1>img:hover{
+	background-color: #C37500;
+  opacity:0.7 !important;
+  filter:alpha(opacity=70) !important; /* For IE8 and earlier */
+  box-shadow: 0 0 0px #000000 !important;
 }
