--- a/css/end.css
+++ b/css/end.css
@@ -12,8 +12,7 @@
 	top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color:  #000000;
-	opacity:0.3;
+    
     border: 1px solid transparent;
     border-radius: 2px;
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
@@ -29,4 +28,15 @@ body{
 	text-align:center;
 	font-size:40px;
 	font-weight:bold;
+}
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+	border-radius: 8px;
 }
