--- a/css/game.css
+++ b/css/game.css
@@ -188,13 +188,13 @@ li{
 }
 .image4-2{
 	
-	z-index:2;	
+		
 	margin-top:-110%;
 	
 }
 .image4-3{
 	
-	z-index:3;	
+	
 	margin-top:-110%;
 	position:relative;
 	
@@ -250,4 +250,43 @@ li{
 .row1-left-1>img:hover{
 	background-color: #C37500;
  
+}
+.button{
+	background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+	font-weight:bold;
+	border-radius: 12px;
+	transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '»';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
