--- a/css/home.css
+++ b/css/home.css
@@ -1,21 +1,46 @@
 #home{
-background-image: url("page.png");
+background-image: url("../images/page.png");
 background-size: cover;
 background-attachment: fixed;
+overflow-x:hidden;
+
 }
 
+.logo {
+
+	position: absolute;
+	left: 50%;
+	margin: 2% -20%;
+	animation: slide 1s 1;
+}
+@keyframes slide {
+	from { left: -150%; }
+	to { left: 50%; }
+	
+}
+ 
 .logo{
-padding-top:50px;
-float: center;
-text-align:center;
+margin-top: 3%;
+
 display: block;
 }
+img{
+width:40%;
+height:auto;
+top:50%;
+left:30%;
+}
+
+
 
 .button1 {
+   
     background-color: #4ce600;
     border: none;
     color: white;
     padding: 25px 32px;
+	margin-left:40%;
+	margin-top:25%;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -26,22 +51,23 @@ display: block;
 	
 	}
 	
-.button{
-margin-top: 5%;
-}
 	
 .button1 {
-margin: auto;
 display: block;
 width: 250px;
 border: 2px solid #004d00;
+
 }
+
+
 
 .button2{
     background-color: #4ce600;
     border: none;
     color: white;
     padding: 25px 32px;
+	margin-left:40%;
+
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -52,11 +78,12 @@ border: 2px solid #004d00;
 }
 
 .button2 {
-margin: auto;
 display: block;
 width: 250px;
 border: 2px solid #004d00;
 }
+
+
 
 .button1:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
@@ -65,7 +92,6 @@ border: 2px solid #004d00;
 .button2:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
 
 
 
